@@ -1,0 +1,9 @@
+package Lacuna::DB::Result::Laws::MembersOnlyStations;
+
+use Moose;
+use utf8;
+no warnings qw(uninitialized);
+extends 'Lacuna::DB::Result::Laws';
+
+no Moose;
+__PACKAGE__->meta->make_immutable(inline_constructor => 0);
