@@ -548,6 +548,35 @@ sub propose_members_only_colonization {
     };
 }
 
+
+sub propose_members_only_stations {
+    my ($self, $session_id, $building_id) = @_;
+    my $empire = $self->get_empire_by_session($session_id);
+    if ($empire->current_session->is_sitter) {
+        confess [1015, 'Sitters cannot create propositions.'];
+    }
+    my $building = $self->get_building($empire, $building_id);
+    unless ($building->effective_level >= 18) {
+        confess [1013, 'Parliament must be level 18 to propose members only stations.',18];
+    }
+    unless ($building->effective_level > 0 and $building->effective_efficiency == 100) {
+        confess [1003, "You must have a functional Parliament!"];
+    }
+    my $proposition = Lacuna->db->resultset('Lacuna::DB::Result::Propositions')->new({
+        type            => 'MembersOnlyStations',
+        name            => 'Members Only Stations',
+        description     => 'Only members of {Alliance '.$building->body->alliance_id.' '.$building->body->alliance->name.'} should be allowed to deploy new stations in the jurisdiction of {Starmap '.$building->body->x.' '.$building->body->y.' '.$building->body->name.'}.',
+        proposed_by_id  => $empire->id,
+    });
+    $proposition->station($building->body);
+    $proposition->proposed_by($empire);
+    $proposition->insert;
+    return {
+        status      => $self->format_status($empire, $building->body),
+        proposition => $proposition->get_status($empire),
+    };
+}
+
 sub propose_neutralize_bhg {
     my ($self, $session_id, $building_id) = @_;
     my $empire = $self->get_empire_by_session($session_id);
@@ -564,7 +593,39 @@ sub propose_neutralize_bhg {
     my $proposition = Lacuna->db->resultset('Lacuna::DB::Result::Propositions')->new({
         type            => 'BHGNeutralized',
         name            => 'BHG Neutralized',
-        description     => 'All Black Hole Generators will cease to operate within and on planets in the jurisdiction of {Starmap '.$building->body->x.' '.$building->body->y.' '.$building->body->name.'}.',
+        description     => 'All non-alliance Black Hole Generators will cease to operate within and on planets in the jurisdiction of {Starmap '.$building->body->x.' '.$building->body->y.' '.$building->body->name.'}.',
+        proposed_by_id  => $empire->id,
+    });
+    $proposition->station($building->body);
+    $proposition->proposed_by($empire);
+    $proposition->insert;
+    return {
+        status      => $self->format_status($empire, $building->body),
+        proposition => $proposition->get_status($empire),
+    };
+}
+
+sub allow_bhg_by_alliance {
+    my ($self, $session_id, $building_id, $alliance_id) = @_;
+    my $empire = $self->get_empire_by_session($session_id);
+    if ($empire->current_session->is_sitter) {
+        confess [1015, 'Sitters cannot create propositions.'];
+    }
+    my $building = $self->get_building($empire, $building_id);
+    unless ($building->effective_level >= 28) {
+        confess [1013, 'Parliament must be level 28 to propose to neutralize black hole generators.',28];
+    }
+    unless ($building->effective_level > 0 and $building->effective_efficiency == 100) {
+        confess [1003, "You must have a functional Parliament!"];
+    }
+    my $alliance = Lacuna->db->resultset('Lacuna::DB::Result::Map::Alliance')->find($alliance_id);
+    unless (defined $alliance) {
+        confess [1002, 'Could not find alliance.'];
+    }
+    my $proposition = Lacuna->db->resultset('Lacuna::DB::Result::Propositions')->new({
+        type            => 'BHGPassport',
+        name            => 'BHG Passport',
+        description     => '{Alliance '.$alliance->id.' '.$alliance->name.' is allowed to use their BHG in the jurisdiction of {Starmap '.$building->body->x.' '.$building->body->y.' '.$building->body->name.'}.',
         proposed_by_id  => $empire->id,
     });
     $proposition->station($building->body);
@@ -894,7 +955,7 @@ sub view_taxes_collected {
 
 
 
-__PACKAGE__->register_rpc_method_names(qw(get_bodies_for_star_in_jurisdiction get_mining_platforms_for_asteroid_in_jurisdiction propose_evict_mining_platform propose_members_only_mining_rights propose_members_only_colonization propose_rename_asteroid propose_rename_uninhabited propose_broadcast_on_network19 get_stars_in_jurisdiction propose_rename_star propose_repeal_law propose_transfer_station_ownership view_propositions view_laws cast_vote propose_fire_bfg propose_writ propose_elect_new_leader propose_induct_member propose_expel_member propose_taxation view_taxes_collected propose_foreign_aid propose_evict_excavator propose_members_only_excavation propose_neutralize_bhg));
+__PACKAGE__->register_rpc_method_names(qw(get_bodies_for_star_in_jurisdiction get_mining_platforms_for_asteroid_in_jurisdiction propose_evict_mining_platform propose_members_only_mining_rights propose_members_only_colonization propose_rename_asteroid propose_rename_uninhabited propose_broadcast_on_network19 get_stars_in_jurisdiction propose_rename_star propose_repeal_law propose_transfer_station_ownership view_propositions view_laws cast_vote propose_fire_bfg propose_writ propose_elect_new_leader propose_induct_member propose_expel_member propose_taxation view_taxes_collected propose_foreign_aid propose_evict_excavator propose_members_only_excavation propose_members_only_stations allow_bhg_by_alliance propose_neutralize_bhg));
 
 no Moose;
 __PACKAGE__->meta->make_immutable;
